# SIOVI_QT

./: .gitignore  CMakeLists.txt  README.md  SIOVI  enums.h  filter.cpp  filter.h  main.cpp  main_bpf.cpp  main_window.cpp  main_window.h  noise_generator.cpp  noise_generator.h  picture_generator.cpp  picture_generator.h
build_bpf/: bpf_1
doc/: additive_noise_description.md  impulse_noise_description.md
